Fix #125043: VSE text outline is wrongly inside the actual text shape

This is only visible when text color has transparency or is fully
transparent. Desired behavior is that the outline would only be
"outside" the actual text.

Pull Request: https://projects.blender.org/blender/blender/pulls/125372

# Conflicts:
#	tests/data